src/test/test-models/bad/validate_set_double_locscale_bad1.stan
parameters {
  real<scale=-31> a;
  real y;
}

model {
  y ~ normal(0,1);
}
